# irwl1-adaptation

./: .gitignore  L0_vs_IRL1_newer.ipynb  L0_vs_IRL1_old.ipynb  README.md  pyproject.toml
results/: curves.csv
src/irwl1/: config.py  data.py  model.py  regularization.py  utils.py
